--- a/compose.yaml
+++ b/compose.yaml
@@ -2,7 +2,7 @@ services:
   db:
     image: mysql
     environment:
-      - MYSQL_ROOT_PASSWORD=root
-      - MYSQL_DATABASE=ecommerce
+      - MYSQL_ROOT_PASSWORD=${DATABASE_PASSWORD:-root}
+      - MYSQL_DATABASE=${DATABASE_NAME:-ecommerce}
     ports:
-      - "3306:3306"
+      - "${DATABASE_PORT:-3306}:3306"
